# OS-Scheduler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  resources.qrc
backend/: FCFS_Scheduler.cpp  FCFS_Scheduler.h  RR_SCHEDULER.cpp  RR_SCHEDULER.h  SJF_Scheduler.cpp  SJF_Scheduler.h  main.cpp  priority_scheduler.cpp  priority_scheduler.h  process.cpp  process.h  scheduler.cpp  scheduler.h
frontend/: mainwindow.cpp  mainwindow.h  mainwindow.ui  processProgress.cpp  processProgress.h  toggle.cpp  toggle.h
